# upb

./: BUILD  WORKSPACE
bazel/: BUILD  jupb_proto_library.bzl  workspace_deps.bzl
java/codegen/: BUILD.bazel  context.cc  context.h  enum_field.cc  enum_field_lite.cc  field.cc  field.h  file.cc  file.h  generator.cc  generator.h  helpers.cc  helpers.h  kotlin_generator.cc  map_field.cc  map_field_lite.cc  message.cc  message_builder.cc  message_builder_lite.cc  message_field.cc  message_lite.cc  message_lite.h  message_serialization_unittest.cc  name_resolver.cc  plugin_unittest.cc  primitive_field.cc  primitive_field_lite.cc  protoc-gen-jupb.cc  service.cc  string_field.cc  string_field_lite.cc
java/runtime/main/com/facebook/upb/runtime/: Arena.java  BUILD.bazel  JupbMessageLiteOrBuilder.java  Messages.java  Minitable.java  ProtocolBufferDecodingException.java  ProtocolBufferEncodingException.java  UpbMessage.java
java/runtime/main/com/facebook/upb/runtime/jni/: BUILD.bazel  OnLoad.cpp  arena.cpp  arena.h  jni_helper.cpp  jni_helper.h  messages.cpp  minitable.cpp  minitable.h
java/runtime/test/com/facebook/upb/: BUILD.bazel  TinyProtoTest.java
java/runtime/test/com/facebook/upb/runtime/: ArenaTest.java  BUILD.bazel  MessagesTest.java
python/: convert.c
upb/: array.c  decode.c  msg_internal.h
upb/test/: BUILD  tiny.proto
upbc/: protoc-gen-upb.cc
