java_library(
    name = "runtime",
    srcs = glob(["*.java"]),
    # runtime_deps = ["//java/runtime/main/com/facebook/upb/runtime/jni:javaupbruntime"],
    # data = ["//java/runtime/main/com/facebook/upb/runtime/jni:javaupbruntime"],
    visibility = ["//java/runtime/test/com/facebook/upb/runtime:__pkg__"]
)